# hooten-young-sales

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-updater.md  code-reviewer.md  competitor-researcher.md  compliance-reviewer.md  data-quality-auditor.md  social-scraper.md  trend-analyst.md
.claude/commands/: check-compliance.md  new-scraper.md  review.md  sync-architecture.md
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/new-scraper/: SKILL.md
.claude/skills/pre-commit/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  pipeline.yml
db/migrations/: 001_sales_schema.sql  002_depletions_allow_negatives.sql  003_auth_schema.sql  004_auth_seed_admin.sql  005_depletions_idig_redesign.sql  006_depletions_premises_allow_na.sql  007_auth_feedback.sql  008_platform_locked_sections.sql  009_field_schema.sql  010_field_seed_role.sql  011_field_rep_description_update.sql  012_strip_redundant_section_roles_from_admins.sql  013_field_rep_rename_to_regional_sales_representative.sql  014_users_allow_deleted_status.sql
docs/: architecture.md  onboarding.md
scripts/: README.md  backfill_customer_metadata.py  preview_emails.py  preview_role_views.py
src/hy_analytics/: __init__.py
src/hy_analytics/api/: __init__.py
src/hy_analytics/models/: __init__.py
src/hy_analytics/scrapers/: __init__.py  instagram.py
src/hy_analytics/services/: __init__.py
src/hy_analytics/utils/: __init__.py
src/hy_sales/: __init__.py  cli.py  main.py  settings.py
src/hy_sales/api/: __init__.py  admin_audit.py  admin_field.py  admin_roles.py  admin_users.py  auth.py  depletions.py  feedback.py  field.py  health.py  platform_config.py  sales.py
src/hy_sales/auth/: __init__.py  audit.py  dependencies.py
src/hy_sales/db/: __init__.py  engine.py  session.py
src/hy_sales/email/: __init__.py  client.py  templates.py
src/hy_sales/models/: __init__.py  account.py  app_config.py  auth_audit_log.py  auth_feedback.py  auth_password_reset_token.py  auth_role.py  auth_user.py  auth_user_role.py  base.py  customer.py  customer_alias.py  dep_account.py  dep_fact.py  dep_file_upload.py  dep_product.py  dep_product_alias.py  depletion.py  distributor.py  field_account_pin.py  field_rep_profile.py  field_rep_territory.py  field_visit_note.py  file_upload.py  invoice.py  invoice_line.py  platform_app_config.py  product.py  product_alias.py
src/hy_sales/parsers/: __init__.py  canonical.py  depletions.py  sales.py
src/hy_sales/schemas/: __init__.py  admin.py  auth.py  depletions.py  feedback.py  field.py  platform_config.py  sales.py  strategic.py
src/hy_sales/security/: __init__.py  passwords.py  tokens.py
src/hy_sales/services/: __init__.py  customer_parser.py  depletions_ingestion.py  depletions_queries.py  depletions_strategic.py  field_priority.py  ingestion.py  sales_queries.py  strategic_queries.py
tests/: __init__.py  conftest.py  test_customer_parser.py  test_email_templates.py  test_field_priority.py  test_parsers.py  test_smoke.py
tests/api/: conftest.py  test_admin.py  test_auth.py
