[project]
name = "hy-analytics"
version = "0.1.0"
description = "Hooten Young — social + competitor intelligence engine."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary — Hooten Young" }
authors = [{ name = "Hooten Young" }]

# Runtime dependencies. Stubbed at versions known to be mutually compatible
# at scaffold time. Run `uv lock` to pin exact versions before first install.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
    "anthropic>=0.40",
    "google-cloud-storage>=2.18",
    "google-cloud-secret-manager>=2.20",
    "apify-client>=1.8",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hy_analytics"]

# ----------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "S",      # bandit (security)
    "SIM",    # simplify
    "RUF",    # ruff-specific
]
ignore = [
    "S101",   # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

# ----------------------------------------------------------------
# mypy — type checking
# ----------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["apify_client.*", "pgvector.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------
# pytest
# ----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
