[project]
name = "hy-sales"
version = "0.1.0"
description = "Hooten Young sales + depletions backend API. Ingests weekly QuickBooks and depletion xlsx feeds, exposes REST endpoints consumed by the hooten-young-dashboard UI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary — Hooten Young" }
authors = [{ name = "Hooten Young" }]

# Runtime dependencies. Versions are minimum-compatible pins.
# Run `uv lock` to produce uv.lock with exact pins; commit that file.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "bcrypt>=4.2",
    "email-validator>=2.2",
    "pyjwt[crypto]>=2.10",
    "structlog>=24.4",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "httpx>=0.27",
]

[project.scripts]
hy-sales-ingest = "hy_sales.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hy_sales"]

# ---------------------------------------------------------------
# Ruff — lint + format (replaces flake8, isort, black, pyupgrade)
# ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "S",      # bandit (security)
    "SIM",    # simplify
    "RUF",    # ruff-specific
]
ignore = [
    "S101",   # assert is allowed
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# HTML email template has very long inline-styled lines.  Splitting
# them on Python source lines doesn't help readability and risks
# introducing whitespace bugs in the rendered HTML.
"src/hy_sales/email/templates.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------
# mypy — strict type checking
# ---------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# openpyxl ships no type stubs (and the community types-openpyxl package
# lags real-world usage). We only use a couple of functions, so the cost
# of typed access is low.
module = ["openpyxl.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------
# pytest
# ---------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
# Session-scoped event loop. The async engine in hy_sales.db.engine
# is created at import time and asyncpg connections bind to that
# loop — per-test loops would break every integration test.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
